Fixed scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -15,7 +15,8 @@
 }
 
 html, body, #app {
-    height: 100%
+    height: 100%;
+    overflow-y: hidden;
 }
 
 input:focus {
